[tool.poetry]
name = "myshorturl"
version = "0.1.0"
description = ""
authors = ["Alexey.Danilov-V <Alexey.Danilov-V@volnamobile.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
loguru = "^0.7.2"
uvicorn = "^0.23.2"
pydantic = "1.10.12"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
