[tool.poetry]
name = "myshorturl"
version = "0.1.0"
description = ""
authors = ["Alexey.Danilov-V <Alexey.Danilov-V@volnamobile.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
loguru = "^0.7.2"
uvicorn = "^0.23.2"
pydantic = {version = "1.10.2", extras = ["email"]}
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
python-dotenv = "^1.0.0"
motor = "^3.3.1"
pymongo = "^4.5.0"
redis = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 89
multi_line_output = 3
length_sort = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/*",]
